--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,31 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+.masthead {    
+    position: fixed;
+    top: 0;
+    border-bottom: 1px solid #f2f3f3;
+    -webkit-animation: intro 0.3s both;
+    animation: intro 0.3s both;
+    -webkit-animation-delay: 0.15s;
+    animation-delay: 0.15s;
+    z-index: 20;
+    width: 100%;
+    background: white;  // set a color to hide content that may appear below masthead
+    height: 75px; // need a magic number here which may break in different viewports
+    // margin-bottom: 85px;
+   }
+
+body {
+    margin: 0;
+    padding-top: 85px;  // padding-top equal to masthead height or greater
+    color: #494e52;
+    font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
+    line-height: 1.5;
+}
+
+table, tr, td, th {
+    border: 0;
+    font-size: 15px;
+}
