--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,14 @@
 
 <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1Q0M4KCVC8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1Q0M4KCVC8');
+</script>
+
 <meta http-equiv="cleartype" content="on">
