--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -52,6 +52,7 @@
 
 {% if page.excerpt %}
   <meta property="og:description" content="{{ seo_description }}">
+  <meta property="description" content="{{ seo_description }}">
 {% endif %}
 
 {% if site.twitter.username %}
